--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -3,6 +3,7 @@
 }
 
 <form asp-action="Login" method="post" style="border: 3px solid #f1f1f1; max-width: 400px; margin: auto; padding: 20px;">
+    <h2 style="text-align: center;">Please fill in this form to login to your account!</h2>
     <div class="imgcontainer">
         <img src="~/images/avatar.png" alt="Avatar" class="avatar" style="width: 40%; border-radius: 50%; margin: 24px 0 12px 0; display: block; margin-left: auto; margin-right: auto;">
     </div>
